# pgn-parser

./: .clang-format  .gitignore  Abdusattorov.pgn  CMakeLists.txt  README.md  callgrind.out.11667  callgrind.out.14344_kingCache  callgrind.out.15039_no_cache  callgrind.out.19639_vector  compile.sh  docker-compose.yml  example_1.pgn  example_2.pgn  example_promotion.pgn  mlp-ha.code-workspace  test.sh  verify-horizonal-prevent-check-2.pgn
src/: CMakeLists.txt  main.cpp
src/chess/: CMakeLists.txt
src/chess/common/include/: GameHelper.hpp  MlpException.hpp  ParsingHelper.hpp  PgnException.hpp  Types.hpp
src/chess/common/src/: CMakeLists.txt  GameHelper.cpp  ParsingHelper.cpp  Types.cpp
src/chess/game/include/: BoardGame.hpp
src/chess/game/src/: BoardGame.cpp  CMakeLists.txt
src/chess/move/include/: AttackMove.hpp  AttackPromotionMove.hpp  BasicMove.hpp  CastlingMove.hpp  Move.hpp  MoveBase.hpp  MoveFactory.hpp  PromotionMove.hpp  Round.hpp
src/chess/move/src/: AttackMove.cpp  AttackPromotionMove.cpp  (+6 more)
src/pgn-parsing/include/: AttackMove.hpp  BasePiece.hpp  BasicMove.hpp  Bishop.hpp  BoardGame.hpp  CastlingMove.hpp  EmptyPiece.hpp  King.hpp  Knight.hpp  Move.hpp  MoveFactory.hpp  ParsingHelper.hpp  Pawn.hpp  Pieces.hpp  PromotionMove.hpp  Queen.hpp  Rook.hpp  Round.hpp  Types.hpp
src/pgn-parsing/src/: AttackMove.cpp  BasePiece.cpp  BasicMove.cpp  Bishop.cpp  BoardGame.cpp  CMakeLists.txt  CastlingMove.cpp  EmptyPiece.cpp  King.cpp  Knight.cpp  Move.cpp  MoveFactory.cpp  ParsingHelper.cpp  Pawn.cpp  PromotionMove.cpp  Queen.cpp  Rook.cpp  Round.cpp  Types.cpp
(+125 files in other folders)
